[gd_scene load_steps=14 format=3 uid="uid://bstx2o4wfw02a"]

[ext_resource type="Script" uid="uid://b8tlraxyq3gdy" path="res://src/Actors/Player/Player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dil0kxxvchw4o" path="res://src/Actors/Player/skin/Player.png" id="2"]
[ext_resource type="AudioStream" uid="uid://bgrni6oedeesh" path="res://assets/Sfx/Blub_04.wav" id="3"]

[sub_resource type="CircleShape2D" id="1"]
radius = 31.0161

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(62, 55)

[sub_resource type="Animation" id="3"]
resource_name = "Idle"
length = 3.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65, 1.7, 1.75, 1.8, 1.85, 1.9, 1.95, 2, 2.05, 2.1, 2.15, 2.2, 2.25, 2.3, 2.35, 2.4, 2.45, 2.5, 2.55, 2.6, 2.65, 2.7, 2.75, 2.8, 2.85, 2.9, 2.95, 3, 3.05, 3.1, 3.15, 3.2, 3.25, 3.3, 3.35, 3.4, 3.45, 3.5, 3.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71]
}

[sub_resource type="Animation" id="4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="5"]
resource_name = "land"
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [73, 74, 75, 76, 77, 78, 79, 80, 81]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hqpi4"]
_data = {
&"Idle": SubResource("3"),
&"RESET": SubResource("4"),
&"land": SubResource("5")
}

[sub_resource type="Animation" id="6"]
resource_name = "Hit"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.505882, 0.94902, 1, 1), Color(1, 1, 1, 1), Color(0.992157, 1, 0.392157, 1), Color(1, 0.721569, 0.466667, 1), Color(0.937255, 0.466667, 1, 1), Color(1, 1, 1, 1), Color(0.505882, 0.94902, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -7), Vector2(-3, -7), Vector2(3, -7), Vector2(-2, -7), Vector2(2, -7), Vector2(-1, -7), Vector2(1, -7), Vector2(0, -7)]
}

[sub_resource type="Animation" id="7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.505882, 0.94902, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t3k2t"]
_data = {
&"Hit": SubResource("6"),
&"RESET": SubResource("7")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hqpi4"]
radius = 3.0
height = 52.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_mask = 3
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.505882, 0.94902, 1, 1)
position = Vector2(0, -7)
texture = ExtResource("2")
hframes = 12
vframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("1")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, -3.5)
shape = SubResource("2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hqpi4")
}

[node name="HitFlash" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_t3k2t")
}

[node name="bounce" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3")

[node name="Residue" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DamageInterval" type="Timer" parent="."]
one_shot = true

[node name="SlimeDetector" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlimeDetector"]
position = Vector2(0, 36)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_hqpi4")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="SlimeDetector" to="." method="_on_slime_detector_body_entered"]
